(library
 (name indexLib)
 (public_name ocp-index.lib)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps indexArtifactReader.mlp)
 (libraries
   ocaml_408
   compiler-libs
   compiler-libs.common
   ocaml-migrate-parsetree
   ocp-indent.lexer
   ocp-indent.utils)
 (wrapped false)
 (flags :standard -w -9))
